--- a/.eslintrc
+++ b/.eslintrc
@@ -9,11 +9,12 @@
     "ellowJs": true,
     "project": "./tsconfig.json"
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "github"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:github/recommended"
   ],
   "rules": {
     "strict": ["error", "never"],
