--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@typescript-eslint/eslint-plugin": "4.24.0",
 		"@typescript-eslint/parser": "4.24.0",
 		"eslint": "7.26.0",
+		"eslint-plugin-github": "4.1.3",
 		"eslint-plugin-prettier": "3.4.0",
 		"husky": "4",
 		"lint-staged": "11.0.0",
