--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-	"name": "express-app-template",
+	"name": "crypto-tracker",
 	"version": "1.0.0",
 	"main": "index.js",
 	"repository": "",
 	"author": "",
 	"license": "ISC",
 	"scripts": {
-		"dev": "ts-node-dev src/index.ts",
-		"start": "ts-node src/index.ts",
+		"start": "env-cmd -f ./config/prod.env ts-node src/index.ts",
+		"dev": "env-cmd -f ./config/dev.env ts-node-dev src/index.ts",
 		"build": "tsc",
-		"lint": "eslint --ext .jsx,.js,.tsx,.ts ./src",
+		"lint": "eslint --ext .jsx,.js,.tsx,.ts",
 		"prettier": "prettier --ignore-path .gitignore \"**/*.+(ts|js|json)\"",
 		"format": "npm run prettier -- --write",
 		"check-format": "npm run prettier -- --list-different",
 		"validate": "npm run check-format && npm run lint"
 	},
 	"dependencies": {
+		"axios": "0.21.1",
 		"chalk": "4.1.1",
+		"concurrently": "6.1.0",
 		"express": "4.17.1",
 		"reflect-metadata": "0.1.13",
 		"ts-node": "9.1.1",
@@ -28,8 +30,8 @@
 		"@types/node": "15.6.0",
 		"@typescript-eslint/eslint-plugin": "4.24.0",
 		"@typescript-eslint/parser": "4.24.0",
+		"env-cmd": "10.1.0",
 		"eslint": "7.26.0",
-		"eslint-plugin-github": "4.1.3",
 		"eslint-plugin-prettier": "3.4.0",
 		"husky": "4",
 		"lint-staged": "11.0.0",
