Update dev script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"license": "ISC",
 	"scripts": {
 		"start": "env-cmd -f ./config/prod.env ts-node src/index.ts",
-		"dev": "env-cmd -f ./config/dev.env ts-node-dev src/index.ts",
+		"dev": "env-cmd -f ./config/dev.env ts-node-dev --poll src/index.ts",
 		"build": "tsc",
 		"lint": "eslint --ext .jsx,.js,.tsx,.ts",
 		"prettier": "prettier --ignore-path .gitignore \"**/*.+(ts|js|json)\"",
