--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
 		"experimentalDecorators": true,
 		"resolveJsonModule": true
 	},
-	"exclude": ["node_modules"],
+	"exclude": ["../node_modules"],
 	"lib": ["es2015"]
 }
